<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView 
        android:id="@+id/tvContactCreate"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/contact_activity"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textSize="22sp" 
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_hint_name" 
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp"
		android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_hint_phone" 
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp"
		android:layout_marginTop="20dp"
		android:layout_marginBottom="30dp" 
		android:layout_gravity="center"
		android:inputType="phone"
        />

    <Button
        android:id="@+id/btAddContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAddContact" 
        android:layout_gravity="center"
        />

</LinearLayout>
